--- a/www/scss/style.scss
+++ b/www/scss/style.scss
@@ -22,3 +22,8 @@
   font-weight: bold;
   border-bottom-width: 0px;
 }
+
+.toggle input:checked + .track {
+  background-color:#009ec9;
+  border-color:#009ec9;
+}
