corrigindo a hora do alerta na hora de mostrar para o usuario

--- a/www/templates/createAlert.html
+++ b/www/templates/createAlert.html
@@ -38,7 +38,7 @@
                ng-model="formData.startTime">
           Hora de Início
           <span class="item-note calm">
-            {{ startTime | date:'HH:mm' }}
+            {{ presentCorrectTime }}
           </span>
           <i class="icon ion-ios-arrow-forward" style="color: lightgray"></i>
         </label>
