Creating route to prescription photo

--- a/www/templates/createMedicament.html
+++ b/www/templates/createMedicament.html
@@ -131,7 +131,7 @@
         </div>
 
 
-        <!-- Quantidade -->
+        <!-- Quantity -->
         <label class="item assertive"
                ng-click="toggleGroup(groups[0])"
                ng-class="{active: isGroupShown(groups[0])}">
@@ -197,7 +197,7 @@
           </div>
         </div>
 
-        <!-- Preço -->
+        <!-- Price -->
         <label class="item item-input">
           <div class="row" style="padding-left: 0px">
             <span class="col col-50 input-label assertive" style="padding-left: 0px; ">Preço</span>
