Showing medicament prescription picture

--- a/www/templates/showPicture.html
+++ b/www/templates/showPicture.html
@@ -3,8 +3,7 @@
   <ion-content>
 
     <div class="item item-image">
-      <img src="http://www.upira.com.br/site/wp-content/uploads/2016/05/medicamentos_217.jpg">
-      <!--<img ng-src="data:image/jpeg;base64,{{picture}}">-->
+      <img ng-src="data:image/jpeg;base64,{{picture}}">
     </div>
 
   </ion-content>
