deixando alerta pronto pra ser salvo, só falta o id do remedio e arrumando salvamento de remedios

--- a/www/templates/createMedicament.html
+++ b/www/templates/createMedicament.html
@@ -64,7 +64,7 @@
               <input type="text"
                      placeholder="Data de Validade"
                      name="expirationDate"
-                     ng-model="medicament.expirationDate"
+                     ng-model="medicament.expiration_date"
                      formatted-date format="'dd/MM/yyyy'"
                      class="text-center color-mfblue"
                      ng-click="openDatePicker()">
