--- a/www/templates/tabs/tab-alerta.html
+++ b/www/templates/tabs/tab-alerta.html
@@ -2,9 +2,11 @@
 
   <div class="platform-android bar-custom bar bar-subheader">
     <div class="button-bar">
-      <a class="button button-outline button-assertive" ng-click="data.filter=true"
+      <a class="button button-outline button-assertive"
+         ng-click="data.filter=true"
          ng-class="{active: data.filter == true}">Ativos</a>
-      <a class="button button-outline button-assertive" ng-click="data.filter=false"
+      <a class="button button-outline button-assertive"
+         ng-click="data.filter=false"
          ng-class="{active: data.filter == false}">Inativos</a>
     </div>
   </div>
