Cleaning medicament data

--- a/www/templates/createMedicament.html
+++ b/www/templates/createMedicament.html
@@ -230,7 +230,7 @@
                ng-click="addPrescriptionPicture()">
           Receita
           <i class="icon ion-checkmark assertive" style="font-size: 16px"
-              ng-if="prescriptionPicture"></i>
+              ng-if="medicament.picture_prescription"></i>
         </label>
 
         <!-- Notes -->
