separating other services

--- a/www/templates/createAlert.html
+++ b/www/templates/createAlert.html
@@ -83,7 +83,7 @@
           </select>
         </label>
 
-        <!-- Alert Medicament -->
+        <!-- Alert medicament -->
         <label class="item item-icon-right assertive"
                ng-click=""
                name="medicamentId"
