--- a/www/templates/createMedicament.html
+++ b/www/templates/createMedicament.html
@@ -39,7 +39,7 @@
 
           <!--Name and Expiration Date-->
           <div class="col">
-            <!-- Medicament Name -->
+            <!-- medicament Name -->
             <label class="item item-input item-stacked-label"
                    ng-class="{'has-error':createMedicamentForm.name.$invalid}"
                    style="padding: 6px 0 5px 10px">
