--- a/www/templates/createPharmacy.html
+++ b/www/templates/createPharmacy.html
@@ -17,7 +17,7 @@
           class="create-form"
           id="createPharmacyForm">
       <ion-list >
-        <!-- Medicament Name -->
+        <!-- medicament Name -->
         <label class="item item-input item-stacked-label"
                ng-class="{'has-error':createPharmacyForm.name.$invalid}" >
           <span class="input-label" >Nome</span >
